Fix horizontal scrolling

--- a/media/metamorphosis-three.less
+++ b/media/metamorphosis-three.less
@@ -32,3 +32,7 @@
 .video {
   position: relative;
 }
+
+body {
+  overflow: hidden;
+}
